--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.0/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/vue.resource/1.3.1/vue-resource.min.js"></script>
+    <script src="https://rawgithub.com/tpmanc/js-mask/master/js-mask.min.js"></script>
 
     <script src="/js/script.js"></script>
 </body>
