--- a/views/contacts-item.ejs
+++ b/views/contacts-item.ejs
@@ -3,6 +3,10 @@
 <section class="contacts">
     <div class="layout__wrapper">
 
+        <div class="contacts__link">
+            <a href="/contacts/edit/<%=result._id %>">Edit</a>
+        </div>
+
         <div class="contacts__item">
             <div class="contacts__item-field">
                 Firstname
