--- a/views/error.ejs
+++ b/views/error.ejs
@@ -3,8 +3,8 @@
 <section class="error">
     <div class="layout__wrapper">
 
-        <h1>500</h1>
-        <p>Internal server error</p>
+        <h1><%=title %></h1>
+        <p><%=message %></p>
 
     </div>
 </section>
